name:                es-proxy
version:             0.1.0.0
homepage:            https://github.com/DaveCTurner/es-proxy#readme
license:             BSD3
license-file:        LICENSE
author:              David Turner
maintainer:          dave.c.turner@gmail.com
copyright:           David Turner
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable es-proxy
  main-is:             es-proxy.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , optparse-applicative
    , bytestring
    , binary
    , binary-conduit
    , attoparsec
    , word8
    , exceptions
    , async
    , conduit
    , conduit-extra
  default-language:    Haskell2010
